--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,48 @@
+body {
+  background-color: #011F3F;
+  text-align: center;
+}
 
+.level-title {
+  color: #FEF2BF;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 3rem;
+  margin: 5%;
+}
+
+.container {
+  display: block;
+  margin: auto;
+  width: 50%;
+}
+
+.btn {
+  border: 10px solid black;
+  border-radius: 20%;
+  display: inline-block;
+  height: 200px;
+  margin: 25px;
+  width: 200px;
+}
+
+/* Not in index.html. Will need to toggle this in index.js for when a person loses */
+.game-over {
+  background-color: red;
+  opacity: 0.5;
+}
+
+.red {
+  background-color: red;
+}
+
+.green {
+  background-color: green;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.yellow {
+  background-color: yellow;
+}
